# Sign-Verse-Robotics

./: .gitignore  README.md  Sign Verse Report  launch_control_tower.bat  requirements.txt
config/: rl_config.yaml
dashboard/: next.config.ts  package-lock.json  package.json
data/simulation/: sign_verse_sim.blend
docs/: Master-Report.md  PIPELINE_HEALTH_REPORT.md  TECHNICAL_HANDBOOK.md
scratch/: list_cameras.py  test_yt_search.py  test_ytdlp_fail.py  verify_export.py
scripts/: analyze_model_footprint.py  build_production_dataset.py  execute_mass_wave.py  generate_batch_report.py  mission_control.py  perception_demo.py  quantize_models.py  render_check.py  resume_auto_job.py  run_batch_test2.py  run_video_batch.py  run_video_workflow.py  schedule_overnight_wave.py  smoke_test_e2e.py  verify_dataset_release.py  verify_pipelines.py  verify_system.py
scripts/blender/: bootstrap_sim.py  launch_simulation.py  sign_verse_addon.py
scripts/isaac/: sign_verse_isaac.py
src/bridge/: blender_bridge.py  dashboard_api.py  isaac_bridge.py
src/core/: auto_youtube_pipeline.py  main.py  orchestrator.py
src/db/: schemas.py
src/export/: engine.py
src/ingestion/: base.py  builder.py  bus.py  normalizer.py  pipeline.py  processor.py  schemas.py  structured_frame.py
src/monitoring/: alerts.py  collector.py
src/motion/: engine.py
src/perception/: downloader.py  engine.py  orchestrator.py  stabilizer.py  visualizer.py
src/robotics/wbmpc/solver/: CMakeLists.txt  build_solver.bat  optimizer.cpp  qp_optimizer.py
src/simulation/: environment.py
web/: index.html
(+218 files in other folders)
